--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-TileImage" content="/frontend/img/favicon/mstile-144x144.png?v1">
   <meta name="theme-color" content="#ffffff">
-  <title>Laméco Dashboard</title>
+  <title>Oddessey Solutions Dashboard</title>
 </head>
 
 <body>
